fixing SQ issues